map and bar charts

--- a/css/site.css
+++ b/css/site.css
@@ -11,9 +11,9 @@
     font-size:0.8em;
 }
 
-#hdx-3W-where {
-    height:360px;
-    width:100%;
+#carte {
+    height:660px;
+    /*width:100%;*/
 }
 
 #wheretitle{
